--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -26,3 +26,6 @@
 
 @import './layout/header';
 @import './include/banner';
+@import './include/collaborators';
+@import './include/subscription';
+@import './include/metrics';
