--- a/assets/scss/include/_banner.scss
+++ b/assets/scss/include/_banner.scss
@@ -39,11 +39,18 @@
     &__btn {
       padding: 19px 60px;
       background: $color-blue-200;
+      border: 1px solid $color-blue-200;
       border-radius: 10px;
       font-weight: 700;
       font-size: 17px;
       line-height: 22px;
       color: $color-white-50;
+      transition: .6s all;
+
+      &:hover{
+        background: $color-white-50;
+        color: $color-blue-200;
+      }
 
       &-svg {
         padding: 18px 20px;
@@ -70,7 +77,7 @@
 
     &-content {
       h1 {
-        font-size: 40px;
+        font-size: 25px;
         line-height: 50px;
       }
 
@@ -78,6 +85,14 @@
         margin-top: 10px;
         font-size: 14px;
         line-height: 20px;
+      }
+
+      &__buttons{
+        gap: 25px;
+      }
+
+      &__btn{
+        text-align: center;
       }
     }
   }
