functions full-done

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,3 +29,4 @@
 @import './include/collaborators';
 @import './include/subscription';
 @import './include/metrics';
+@import './include/functions';
