--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,5 +397,44 @@
     font-size: 25px;
   }
 }
+.functions {
+  margin-top: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 75px;
+}
+
+.function {
+  max-width: 307px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.function h1 {
+  margin-top: 7px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: #19191B;
+}
+.function p {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #696871;
+}
+
+@media screen and (max-width: 920px) {
+  .functions {
+    margin-top: 70px;
+    padding-left: 40px;
+    padding-right: 40px;
+    gap: 30px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
