--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -1,9 +1,15 @@
 $color-white-50: #FFFFFF;
+$color-white-60: #F8F8F8;
+$color-white-80: #EAE9F2;
 $color-white-100: #E7E7E7;
 $color-white-600: #696871;
 
+$color-red-500: #9F3919;
+
 $color-orange-100: #FF7143;
+$color-orange-150: #FF7143;
 
 $color-blue-200: #5454D4;
 
+$color-black-150: #1D293F;
 $color-black-100: #19191B;
